<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="net_failed">网络连接失败,请稍后再试!</string> 

    <string name="app_name">机床监控系统</string>
    <string name="company_name">成都万明机械设备制造有限公司</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
	<string name="wanming1">    成都万明机械设备制造有限公司创建于1993年，是集自主开发、设计、制造为一体的专业生产各种成都彩钢瓦机，成都彩钢瓦成型机和成都Ｃ型钢成型机以及电缆桥架机型设备的厂家。 公司本着“质量第一，顾客至上”的经营宗旨，“开拓进取、求精务实”的精神，以及完善的售后服务和优</string>
	<string name="wanming2">良的产品质量，贏得广大客户的好评。产品不但畅销全国各地，而且远销哈萨克斯坦、吉尔吉斯斯坦等国家。 展望未来，万明机械充满信心。汇聚英华、成就杰出、持续创新、悦意进取是万明机械始终不渝的追求。 热忱欢迎新老客户来人来函洽谈订购。</string>
	
    <!-- 基本信息 -->
    <string name="tab_text1">基本信息</string> 
    
    <string name="worker_info">工人信息</string>
    <string name="machine_info">机床信息</string>
    <string name="workshop_info">车间信息</string>
    <string name="factory_info">厂家信息</string>

    <!-- 机床动态 -->
    <string name="tab_text2">机床动态</string>
    <!-- 车间动态 -->
    <string name="tab_text3">车间动态</string>
    <!-- 关于我们 -->
    <string name="tab_text4">关于我们</string>

</resources>