<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/basic_info_layout" >

    <LinearLayout
        android:id="@+id/basic_info_title"
        android:layout_width="fill_parent"
        android:layout_height="400dp"
        android:background="@color/basic_info_title"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="50dp"
            android:orientation="horizontal" >

            <com.itdog.gifview.MyGifView
                android:id="@+id/basic_info_title_gif"
                android:layout_width="320dp"
                android:layout_height="200dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"/>

            <TextView
                android:id="@+id/basic_info_title_tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wanming1"
                android:textSize="20dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/basic_info_title_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/wanming2"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/worker_info_layout"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_below="@id/basic_info_title"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/worker_info_selector"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/worker_info" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/worker_info"
            android:textSize="30dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/maine_info_layout"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/worker_info_layout"
        android:layout_marginRight="50dp"
        android:background="@drawable/machine_info_selector"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/machine_info" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/machine_info"
            android:textSize="30dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/workshop_info_layout"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_below="@id/worker_info_layout"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/workshop_info_selector"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/workshop_info" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/workshop_info"
            android:textSize="30dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/factory_info_layout"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/maine_info_layout"
        android:layout_marginRight="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/factory_info_selector"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/factory_info" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/factory_info"
            android:textSize="30dp" />
    </LinearLayout>

</RelativeLayout>